@@ -14,14 +14,19 @@ SNIPPET_CHOOSER_MODAL_ONLOAD_HANDLERS = {
         }
 
         var searchUrl = $('form.snippet-search', modal.body).attr('action');
+        var request;
 
         function search() {
-            $.ajax({
+            request = $.ajax({
                 url: searchUrl,
                 data: {q: $('#id_q').val(), results: 'true'},
                 success: function(data, status) {
+                    request = null;
                     $('#search-results').html(data);
                     ajaxifyLinks($('#search-results'));
+                },
+                error: function() {
+                    request = null;
                 }
             });
             return false;
@@ -34,12 +39,16 @@ SNIPPET_CHOOSER_MODAL_ONLOAD_HANDLERS = {
                 dataObj.q = $('#id_q').val();
             }
 
-            $.ajax({
+            request = $.ajax({
                 url: searchUrl,
                 data: dataObj,
                 success: function(data, status) {
+                    request = null;
                     $('#search-results').html(data);
                     ajaxifyLinks($('#search-results'));
+                },
+                error: function() {
+                    request = null;
                 }
             });
             return false;
@@ -48,6 +57,9 @@ SNIPPET_CHOOSER_MODAL_ONLOAD_HANDLERS = {
         $('form.snippet-search', modal.body).on('submit', search);
 
         $('#id_q').on('input', function() {
+            if (request) {
+                request.abort();
+            }
             clearTimeout($.data(this, 'timer'));
             var wait = setTimeout(search, 200);
             $(this).data('timer', wait);
